--- a/templates/survey.html
+++ b/templates/survey.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WhereNext?</title>
-        <link href= "web/quiz.css" rel="stylesheet">
+        <link href= "../web/quiz.css" rel="stylesheet">
     </head>
     <body>
         <header class="header">
             <div class="logo">
-                <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <a href="index.html" class="title">WhereNext?</a>
+                <img src="../web/img/logo.png" alt="WhereNext logo" class="headerlogo">
+                <a href="../index.html" class="title">WhereNext?</a>
             </div>
-            <a href="login.html" class="login">Log In</a>
+            <a href="../login.html" class="login">Log In</a>
         </header>
 
         <section class="hero">
