--- a/templates/survey.html
+++ b/templates/survey.html
@@ -23,18 +23,17 @@
                 <a href="map.html" class="option">Explore Options</a>
             </div>
         </section>
-        <form action="/submit-survey" method="POST" class="survey-container">
+        <form action="/recommend" method="POST" class="survey-container">
             <div class="question">
                 <p>How much would you like to spend on living costs per month (rent, transportation, groceries?)</p>
                 <div class="slidecontainer">
                   <span class="slider-label left">&lt; $1k <br> per month</span>
-                  <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL" >
+                  <input type="range" min="1000" max="3000" value="2000" class="slider" name="COL">
                   <span class="slider-label right">&gt; $3k <br> per month</span>
                 </div>
                 <div class="slider-value" id="sliderValue">$2000</div>
-              </div>
+            </div>
               
-
             <div class="question">
                 <p>On a scale from 1 to 5, how important are safety concerns, like low crime rates, in your decision when choosing a place to live?</p>
                 <div class="quiz">
