--- a/templates/survey.html
+++ b/templates/survey.html
@@ -18,9 +18,9 @@
         <section class="hero">
             <h2>Where should you move?</h2>
             <div class="navigation">
-                <a href="quiz.html" class="option">Take the survey</a>
-                <a href="matches.html" class="option">View Top Matches</a>
-                <a href="map.html" class="option">Explore Options</a>
+                <a href="../quiz.html" class="option">Take the survey</a>
+                <a href="../matches.html" class="option">View Top Matches</a>
+                <a href="../map.html" class="option">Explore Options</a>
             </div>
         </section>
         <form action="/recommend" method="POST" class="survey-container">
