--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
         <title>
             WhereNext?
         </title>
-        <link href= "index.css" rel="stylesheet">
+        <link href= "../static/css/index.css" rel="stylesheet">
 
     </head>
     <body>
         <header class="header">
             <div class="logo">
-                <img src="web/img/logo.svg" alt="WhereNext logo" class="headerlogo">
+                <img src="static/images/logo.svg" alt="WhereNext logo" class="headerlogo">
                 <a href="index.html" class="title">WhereNext?</a>
             </div>
             <a href="login.html" class="login">Log In</a>
@@ -26,7 +26,7 @@
                 
             <div class="text-section">
                 <div class="text_content">
-                    <img class="WhereNextLogo" src="web/img/logo.svg" alt="WhereNext Logo">
+                    <img class="WhereNextLogo" src="static/images/logo.svg" alt="WhereNext Logo">
                     <h1>WhereNext?</h1>
                     <p class="move">Don't know where to move?</p>
                     <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
