--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     <p class="move">Don't know where to move?</p>
                     <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
                     <div class="button-container">
-                    <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
+                    <a href="survey.html" class="start-quiz-button">Start Quiz</a>
                 </div>
     
                 </div>
