--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WhereNext?</title>
+    <link href="{{ url_for('static', filename='css/index.css') }}" rel="stylesheet">
+</head>
+<body>
+    <header class="header">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="WhereNext logo" class="headerlogo">
+            <a href="/" class="title">WhereNext?</a>
+        </div>
+        <a href="login.html" class="login">Log In</a>
+    </header>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" 
-            content="IE=edge">
-        <meta name="viewport" 
-            content="width=device-width, initial-scale=1.0">
-        <title>
-            WhereNext?
-        </title>
-        <link href= "../static/css/index.css" rel="stylesheet">
-
-    </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-                <img src="../static/images/logo.svg" alt="WhereNext logo" class="headerlogo">
-                <a href="index.html" class="title">WhereNext?</a>
-            </div>
-            <a href="login.html" class="login">Log In</a>
-        </header>
-
-        <div class="container">
-                
-            <div class="text-section">
-                <div class="text_content">
-                    <img class="WhereNextLogo" src="../static/images/logo.svg" alt="WhereNext Logo">
-                    <h1>WhereNext?</h1>
-                    <p class="move">Don't know where to move?</p>
-                    <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
-                    <div class="button-container">
-                    <a href="survey.html" class="start-quiz-button">Start Quiz</a>
+    <div class="container">
+        <div class="text-section">
+            <div class="text_content">
+                <img class="WhereNextLogo" src="{{ url_for('static', filename='images/logo.svg') }}" alt="WhereNext Logo">
+                <h1>WhereNext?</h1>
+                <p class="move">Don't know where to move?</p>
+                <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
+                <div class="button-container">
+                    <a href="quiz.html" class="start-quiz-button">Start Quiz</a>
                 </div>
-    
-                </div>
-            </div>
-            <div class="image-section">
-                <img src="../static/images/couple.png" alt="Moving People with Boxes">
             </div>
         </div>
-
-        
-    </body>
-
+        <div class="image-section">
+            <img src="{{ url_for('static', filename='web/img/couple.png') }}" alt="Moving People with Boxes">
+        </div>
+    </div>
+</body>
 </html>
