--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,10 @@
         <header class="header">
             <div class="logo">
                 <img src="../static/images/logo.svg" alt="WhereNext logo" class="headerlogo">
-                <a href="index.html" class="title">WhereNext?</a>
+                <a href="{{ url_for('home') }}" class="title">WhereNext?</a>
             </div>
-            <a href="login.html" class="login">Log In</a>
+           <a href="{{ url_for('login') }}" class="login">Log In</a>
+
         </header>
 
         <div class="container">
@@ -31,7 +32,7 @@
                     <p class="move">Don't know where to move?</p>
                     <p class="prompt">Take the quiz to find out which city <br> is best for you.</p>
                     <div class="button-container">
-                    <a href="survey.html" class="start-quiz-button">Start Quiz</a>
+                        <a href="{{ url_for('survey') }}" class="start-quiz-button">Start Quiz</a>
                 </div>
     
                 </div>
