--- a/templates/survey.html
+++ b/templates/survey.html
@@ -10,17 +10,17 @@
         <header class="header">
             <div class="logo">
                 <img src="../web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <a href="../index.html" class="title">WhereNext?</a>
+                <a href="../{{ url_for('home') }}.html" class="title">WhereNext?</a>
             </div>
-            <a href="../login.html" class="login">Log In</a>
+            <a href="{{ url_for('login') }}" class="login">Log In</a>
         </header>
 
         <section class="hero">
             <h2>Where should you move?</h2>
             <div class="navigation">
-                <a href="../quiz.html" class="option">Take the survey</a>
-                <a href="../matches.html" class="option">View Top Matches</a>
-                <a href="../map.html" class="option">Explore Options</a>
+                <a href="{{ url_for('survey') }}" class="option">Take the survey</a>
+                <a href="{{ url_for('matches') }}" class="option">View Top Matches</a>
+                <a href="{{ url_for('map') }}" class="option">Explore Options</a>
             </div>
         </section>
         <form action="/recommend" method="POST" class="survey-container">
