--- a/templates/map.html
+++ b/templates/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhereNext?</title>
-    <link href= "web/map.css" rel="stylesheet">
+    <link href= "../static/css/map.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
@@ -12,21 +12,20 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-            <a href="index.html" class="title">WhereNext?</a>
+            <img src="../static/images/logo.png" alt="WhereNext logo" class="headerlogo">
+            <a href="{{ url_for('home') }}" class="title">WhereNext?</a>
         </div>
-        <a href="login.html" class="login">Log In</a>
+        <a href="{{ url_for('login') }}" class="login">Log In</a>
     </header>
     <div class="explore">
         <h1>Explore</h1>
     </div>
     <div class="again">
         <h2>Based on your results...</h2>
-        <a href="quiz.html"> Retake Quiz</a>
+        <a href="{{ url_for('survey') }}"> Retake Quiz</a>
     </div>
     <div id="map" style="height: 80vh; width: 100%;"></div>
-
-    <script src='web/script.js'> </script>
+    <script src="/static/js/script.js"></script>
     
 </body>
 </html>
