--- a/templates/survey.html
+++ b/templates/survey.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WhereNext?</title>
-        <link href= "../web/quiz.css" rel="stylesheet">
+        <link href= "../static/css/quiz.css" rel="stylesheet">
     </head>
     <body>
         <header class="header">
             <div class="logo">
-                <img src="../web/img/logo.png" alt="WhereNext logo" class="headerlogo">
-                <a href="../{{ url_for('home') }}.html" class="title">WhereNext?</a>
+                <img src="../static/images/logo.svg" alt="WhereNext logo" class="headerlogo">
+                <a href="{{ url_for('home') }}" class="title">WhereNext?</a>
             </div>
             <a href="{{ url_for('login') }}" class="login">Log In</a>
         </header>
