--- a/templates/survey.html
+++ b/templates/survey.html
@@ -28,7 +28,7 @@
                 <p>How much would you like to spend on living costs per month (rent, transportation, groceries?)</p>
                 <div class="slidecontainer">
                   <span class="slider-label left">&lt; $1k <br> per month</span>
-                  <input type="range" min="1000" max="3000" value="2000" class="slider" name="COL">
+                  <input type="range" min="1000" max="3000" value="2000" class="slider" id="COL" name="COL">
                   <span class="slider-label right">&gt; $3k <br> per month</span>
                 </div>
                 <div class="slider-value" id="sliderValue">$2000</div>
