--- a/templates/survey.html
+++ b/templates/survey.html
@@ -406,7 +406,7 @@
         </div>
             <div class="submit-section">
                 <!-- <a class="submit" href="matches.html">Submit Survey!</a>-->
-                <button type="submit">Submit Survey</button>
+                <button class="submit" type="submit">Submit Survey</button>
             </div>
 
 
