--- a/templates/map.html
+++ b/templates/map.html
@@ -26,8 +26,27 @@
     </div>
     <div id="map" style="height: 80vh; width: 100%;"></div>
 
+    <div id="map" style="height: 80vh; width: 100%;"></div>
 
+    <script>
+        // Ensure `locations` is declared once and properly assigned
+        const points = {{ locations | tojson | safe }};
     
+        // Initialize the map
+        const map = L.map('map').setView([39.8283, -98.5795], 4); // Center map on the US
+    
+        // Add a tile layer
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+        }).addTo(map);
+    
+        // Loop through `locations` to add markers
+        locations.forEach(location => {
+            L.marker([location.Latitude, location.Longitude])
+                .addTo(map)
+                .bindPopup(`<b>${points.City_State}</b><br>${points.blurb}`);
+        });
+    </script>
     
 </body>
 </html>
