--- a/templates/survey.html
+++ b/templates/survey.html
@@ -227,7 +227,7 @@
                 <p>On a scale from 1 to 5, how much do you prefer commuting via driving your own car over using public transportation?</p>
                 <div class="quiz">
                     <label class="option-label">
-                        Not <br> Important
+                       Prefer  <br> Public Transportation
                         <input type="radio" name="transportation" value="1">
                         <span class="radio-label green"></span>
                     </label>
@@ -245,7 +245,7 @@
                     </label>
                     <label class="option-label">
                         <input type="radio" name="transportation" value="5">
-                        <span class="radio-label orange"></span> Very <br> Important
+                        <span class="radio-label orange"></span> Prefer <br> Car
                     </label>
                   </div>
             </div> 
