--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="image-section">
-                <img src="../static/images/couple.png" alt="Moving People with Boxes">
+                <img src="../static/images/people.png" alt="Moving People with Boxes">
             </div>
         </div>
 
