--- a/templates/map.html
+++ b/templates/map.html
@@ -33,6 +33,8 @@
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
         }).addTo(map);
+        L.control.scale().addTo(map);
+
     </script>
 </body>
 </html>
