--- a/templates/matches.html
+++ b/templates/matches.html
@@ -24,6 +24,7 @@
     <div class="cards">
       {% for match in matches %}
       <div class="card {% if loop.index == 1 %}purple{% elif loop.index == 2 %}blue{% elif loop.index == 3 %}orange{% endif %}">
+            <h2>#{{ loop.index }}</h2>
           <img src="{{ match.image }}" alt="{{ match.City_State }}">
           <h3>{{ match.City_State }}</h3>
           <p>You’ll love...</p>
