--- a/static/css/matches.css
+++ b/static/css/matches.css
@@ -104,9 +104,11 @@ h1 {
 .cards {
     display: flex;
     flex-direction: row; /* Arrange cards horizontally */
-    gap: 20px; /* Space between cards */
+    gap: 20px;
     justify-content: center; /* Center the cards horizontally */
-    align-items: flex-end; /* Align card bottoms */
+    align-items: stretch; /* Make cards stretch vertically */
+    height: 100%; /* Take full height of the container */
+    overflow-y: auto;
 }
 
 .card {
@@ -124,18 +126,7 @@ h1 {
 
 }
 
-/* Card Specific Heights */
-.card.blue {
-    height: 800px; /* #2 */
-}
 
-.card.purple {
-    height: 750px; /* #1 */
-}
-
-.card.orange {
-    height: 700px; /* #3 */
-}
 
 .card ul {
     list-style-type: circle;
