--- a/templates/matches.html
+++ b/templates/matches.html
@@ -23,7 +23,7 @@
 
     {% if matches %}
         <div class="cards">
-            <div class="card blue" style="height: 400px;">
+            <div class="card blue" >
                 <h2>#2</h2>
                 <img src="{{ matches[1].image | default('../static/images/default_image.jpg') }}" alt="{{ matches[1].City_State | default('Unknown City') }}">
                 <h3>{{ matches[1].City_State }}</h3>
@@ -34,7 +34,7 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="card purple" style="height: 500px;">
+            <div class="card purple" ">
                 <h2>#1</h2>
                 <img src="{{ matches[0].image | default('../static/images/default_image.jpg') }}" alt="{{ matches[0].City_State | default('Unknown City') }}">
                 <h3>{{ matches[0].City_State }}</h3>
@@ -45,7 +45,7 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="card orange" style="height: 300px;">
+            <div class="card orange" >
                 <h2>#3</h2>
                 <img src="{{ matches[2].image | default('../static/images/default_image.jpg') }}" alt="{{ matches[2].City_State | default('Unknown City') }}">
                 <h3>{{ matches[2].City_State }}</h3>
